--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,25 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+h1 {
+  font-size: 3rem;
+  margin-top: 20px;
+}
+
+h2 {
+  font-size: 2.2rem;
+}
+
+h3 {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+}
 .custom {
   background-color: white;
 }
@@ -21,9 +40,8 @@ body {
     display: none;
   }
 }
-
 .prod {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   margin-bottom: 20px;
   /* Agrega el estilo de sombra deseado */
 }
@@ -39,6 +57,10 @@ body {
 
 .custom-icon-color {
   color: black;
+}
+
+.max-img-width {
+  max-width: 70%;
 }
 
 .divider {
