--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,7 +1,7 @@
 @import '../components/carousel';
 
 .prod {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     margin-bottom: 20px;
     /* Agrega el estilo de sombra deseado */
 }
