--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,11 @@ h3 {
   vertical-align: middle;
 }
 
+.navbar-nav .nav-link:hover {
+  background-color: #f0f0f0 !important;
+  color: rgb(32, 4, 243) !important;
+}
+
 @media (min-width: 991px) {
   .accordion-item {
     display: none;
@@ -49,6 +54,11 @@ h3 {
 .box1 {
   margin-top: 40px;
   margin-bottom: 40px;
+}
+
+.subscription-container-wrapper {
+  height: 200px;
+  /* Ajusta la altura del contenedor de suscripcion */
 }
 
 .customFo {
