--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -10,3 +10,8 @@
     margin-top: 40px;
     margin-bottom: 40px;
 }
+
+.subscription-container-wrapper {
+    height: 200px;
+    /* Ajusta la altura del contenedor de suscripcion */
+}
